Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1606

Impala does not always give short name to Llama

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.1
    • None
    • None

    Description

      If Kerberos or LDAP authentication is enabled, Impala may not send the short name to Llama for the user<->group mapping; instead it apparently sends the user@domain portion of the principal.

      Attachments

        Activity

          People

            jyu@cloudera.com Juan Yu
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: