IMPALA-1606: Impala does not always give short name to Llama.

Change-Id: I41bd4456d7431c100cbf8e9651b2a5c948039786
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5742
Reviewed-by: Juan Yu <jyu@cloudera.com>
Tested-by: jenkins